# TASK3_CV

./: CMakeLists.txt
src/: HarrisDetector.cpp  HarrisDetector.h  MainApp.cpp  MainApp.h  MainFrame.cpp  MainFrame.h  MathUtils.cpp  MathUtils.h  SiftDetector.cpp  SiftDetector.h
